Fix: Portfolio language switching paths

--- a/public/portfolio/es/index.html
+++ b/public/portfolio/es/index.html
@@ -1029,7 +1029,7 @@
 
     <!-- Language Switcher -->
     <div id="language-switcher">
-        <a href="/" class="lang-btn" onclick="localStorage.setItem('preferredLanguage', 'en')">EN</a>
+        <a href="/portfolio/" class="lang-btn" onclick="localStorage.setItem('preferredLanguage', 'en')">EN</a>
         <span class="lang-btn active">ES</span>
     </div>
 
