Enhancement: Add animated boids inside the Portfolio button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
                         vender más y automatizar procesos.</p>
                     <div class="hero-ctas">
                         <a href="#precios" class="btn btn-primary">Ver Soluciones</a>
-                        <a href="/portfolio/" class="btn btn-outline">Ver nuestro Portfolio</a>
+                        <a href="/portfolio/" class="btn btn-outline" id="portfolio-btn">
+                            <canvas id="boids-canvas"></canvas>
+                            <span style="position: relative; z-index: 2;">Ver nuestro Portfolio</span>
+                        </a>
                     </div>
                 </div>
 
