--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:image" content="/nox_catalog.png">
 
     <link rel="stylesheet" href="/index.css">
+    <link rel="canonical" href="https://noxsites.com/" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
