--- a/public/portfolio/es/index.html
+++ b/public/portfolio/es/index.html
@@ -14,6 +14,7 @@
 
     <link rel="icon" type="image/png" href="../favicon.png">
     <link rel="apple-touch-icon" href="../favicon.png">
+    <link rel="canonical" href="https://noxsites.com/portfolio/es/" />
 
     <!-- Hreflang tags for multilingual SEO -->
     <link rel="alternate" hreflang="es" href="https://noxsites.com/portfolio/es/" />
