--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -12,6 +12,7 @@
 
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="canonical" href="https://noxsites.com/portfolio/" />
 
     <!-- Hreflang tags for multilingual SEO -->
     <link rel="alternate" hreflang="en" href="https://noxsites.com/portfolio/" />
